Link only to the neccesary libraries

--- a/utilities/CMakeLists.txt
+++ b/utilities/CMakeLists.txt
@@ -3,4 +3,4 @@ set (HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/)
 
 add_library(utils ${CPP_FILES})
 target_include_directories(utils PUBLIC ${HEADERS})
-target_link_libraries(utils pthread gflags)
+target_link_libraries(utils pthread)
