--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,20 @@
 cmake_minimum_required(VERSION 3.10)
 project(subnet)
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc -static-libstdc++")
 set (CMAKE_CXX_STANDARD 17)
 set (CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Threads REQUIRED)
+
+if (APPLE)
+    message("Using macOS C++ flags")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libc++ -static-libstdc++")
+else()
+    message("Using Linux g++ flags")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc -static-libstdc++")
+endif()
+
+include_directories(thirdparty)
 
 add_subdirectory(networking)
 add_subdirectory(utilities)
